# coast

projects/: CMakeLists.txt
projects/CFCSS/: CFCSS.cpp  CFCSS.h  CMakeLists.txt
projects/DWC/: CMakeLists.txt  DWC.cpp
projects/TMR/: CMakeLists.txt  TMR.cpp
projects/dataflowProtection/: CMakeLists.txt  cloning.cpp  dataflowProtection.cpp  dataflowProtection.h  inspection.cpp  interface.cpp  synchronization.cpp  utils.cpp  verification.cpp
projects/debugStatements/: CMakeLists.txt  debugStatements.cpp
projects/exitMarker/: CMakeLists.txt  exitMarker.cpp
projects/smallProfile/: CMakeLists.txt  smallProfile.cpp
